# rtichoke_python

./: .gitignore  .nojekyll  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Untitled.html  aj_estimate_summary_report.html  before_we_validate.html  before_we_validte.html  changelog.html  conduct.html  contributing.html  example.html  fake.html  index.html  monkeytype.sqlite3  new_test.py  objects.json  plotly_helper_functions.py  pyproject.toml  read_curve_dictionary.py  read_decision_combined_curve_dictionary.py  render_summary.html  requirements.txt  rtichoke_quarto.ipynb  search.json  sitemap.xml  summary_report.html  temp.html  walkthrough_aj_estimate.html
.github/workflows/: dev.workflow.yml  python-package.yml  rtichoke014.workflow.yml
docs/: .gitignore  Makefile  _brand.yml  _quarto.yml  _sidebar.yml  aj_estimate_summary_report.qmd  before_we_validate.qmd  conf.py  dcurves_example.py  example.ipynb  index.qmd  make.bat  objects.json  render_summary.qmd  sandbox.py  small_data_example.py  walkthrough_aj_estimate.py  walkthrough_aj_estimate.qmd  walkthrough_aj_estimate.quarto_ipynb
docs/_site/: before_we_validate.html  changelog.html  conduct.html  contributing.html  example.html  robots.txt  sandbox.html  search.json  sitemap.xml  walkthrough_aj_estimate.html
docs/_site/reference/: create_calibration_curve.html  index.html  (+9 more)
docs/reference/: .gitignore  create_calibration_curve.qmd  create_decision_curve.qmd  create_gains_curve.qmd  create_lift_curve.qmd  create_precision_recall_curve.qmd  create_roc_curve.qmd  index.qmd  plot_decision_curve.qmd  plot_gains_curve.qmd  plot_lift_curve.qmd  plot_precision_recall_curve.qmd  plot_roc_curve.qmd  rtichoke.qmd
docs/tutorials/: getting_started.qmd
reference/: create_calibration_curve.html  create_decision_curve.html  create_gains_curve.html  create_lift_curve.html  create_precision_recall_curve.html  create_roc_curve.html  index.html  plot_decision_curve.html  plot_gains_curve.html  plot_lift_curve.html  plot_precision_recall_curve.html  plot_roc_curve.html  prepare_performance_data.html  prepare_performance_data_times.html  rtichoke.html
rtichoke/: README.md  __init__.py  plotly_helper_functions.py  requirements.txt  rtichoke.py  setup.py
rtichoke/helpers/: helper_functions.py  validations.py
rtichoke/performance_data/: prepare_calibration_data.py  prepare_performance_data.py
rtichoke/plot/: create_generic_plot_dict.py  plotting.py
rtichoke/rtichoke.egg-info/: PKG-INFO  SOURCES.txt
rtichoke/rtichoke_curves/: __init__.py  exported_functions.py  gains.py  lift.py  performance_data.py  plotly_helper_functions.py  precision_recall.py  roc.py  send_post_request_to_r_rtichoke.py
rtichoke/tests/: test_calculate_performance_data.py  test_vericiation_tests.py
site_libs/bootstrap/: bootstrap-4e9de3f14334770c24c3d66ce568a1c1.min.css  bootstrap-dark-1331f0d9b4b52cbbd89540b4a4264c49.min.css  bootstrap-dark-2041ce29c4eca8a233abee98b700a985.min.css  bootstrap-dark-396919ee65270a4654eb6aacd5ebc6ea.min.css  bootstrap-ddca9ae5ddefefadba99f8dec4376b72.min.css
source/: conf.py  index.rst
src/: end_to_end_test.py  temp.html  temp.py
src/rtichoke/: __init__.py  rtichoke.py
src/tests/: __init__.py  test_calculate_performance_data.py  test_vericiation_tests.py
tests/: test_calibration.py  test_calibration_smoothing.py  test_calibration_times.py  test_heuristics.py  test_rtichoke.py
tutorials/: getting_started.html
(+41 files in other folders)
