[project]
authors = [
    {name = "Uriah Finkel"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.9"
dependencies = [
    "plotly<6.0.0,>=5.13.1",
    "ipython<9.0.0,>=8.11.0",
    "nbformat<6.0.0,>=5.7.3",
    "sphinx-autoapi<3.0.0,>=2.1.0",
    "sphinx-rtd-theme<2.0.0,>=1.2.0",
    "pandas<3.0.0,>=2.0.0",
    "importlib>=1.0.4",
    "quartodoc>=0.9.1",
    "papermill>=2.6.0",
]
name = "rtichoke"
version = "0.1.10"
description = "interactive visualizations for performance of predictive models"
readme = "README.md"

[dependency-groups]
dev = [
    "jupyter<2.0.0,>=1.0.0",
    "myst-nb<1.0.0,>=0.17.1; python_version ~= \"3.9\"",
    "sphinx-autoapi<3.0.0,>=2.1.0",
    "sphinx-rtd-theme<2.0.0,>=1.2.0",
    "mypy<2.0.0,>=1.2.0",
    "pytest-cov<5.0.0,>=4.0.0",
    "pytest<8.0.0,>=7.3.0",
    "pyzmq<27.0.0,>=26.3.0",
    "ruff>=0.11.0",
    "ipykernel>=6.29.5",
    "lifelines>=0.30.0",
    "uv>=0.6.11",
]

[tool.uv.workspace]
members = ["rtichoke"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
