[project]
authors = [
    {name = "Uriah Finkel"},
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "plotly<6.0.0,>=5.13.1",
    "ipython<9.0.0,>=8.11.0",
    "nbformat<6.0.0,>=5.7.3",
    "sphinx-autoapi<3.0.0,>=2.1.0",
    "sphinx-rtd-theme<2.0.0,>=1.2.0",
    "importlib>=1.0.4",
    "quartodoc>=0.9.1",
    "papermill>=2.6.0",
    "polars>=1.28.0",
    "pyarrow>=20.0.0",
    "ty>=0.0.1a5",
    "pandas>=2.2.3",
    "typing>=3.7.4.3",
    "polarstate==0.1.8",
]
name = "rtichoke"
version = "0.1.16"
description = "interactive visualizations for performance of predictive models"
readme = "README.md"

[dependency-groups]
dev = [
    "jupyter<2.0.0,>=1.0.0",
    "myst-nb<1.0.0,>=0.17.1; python_version ~= \"3.9\"",
    "pytest-cov<5.0.0,>=4.0.0",
    "pytest<8.0.0,>=7.3.0",
    "pyzmq<27.0.0,>=26.3.0",
    "ruff>=0.11.0",
    "ipykernel>=6.29.5",
    "lifelines>=0.30.0",
    "uv>=0.6.11",
    "marimo>=0.14.7",
    "pre-commit>=4.2.0",
    "dcurves>=1.1.5",
    "plotly>=5.24.1",
    "ty>=0.0.1a12",
    "scikit-learn>=1.6.1",
    "polarstate>=0.1.6",
]

[tool.uv.workspace]
members = ["rtichoke"]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"
